--- a/frontend_weft/pubspec.yaml
+++ b/frontend_weft/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7  # For SVG map rendering
+  xml: ^6.3.0
   location: ^5.0.3     # For getting user location
 
   # The following adds the Cupertino Icons font to your application.
