--- a/frontend_weft/pubspec.yaml
+++ b/frontend_weft/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_svg: ^2.0.7  # For SVG map rendering
   xml: ^6.3.0
   location: ^5.0.3     # For getting user location
+  geolocator: ^10.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
