--- a/frontend_weft/ios/Runner/Info.plist
+++ b/frontend_weft/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to your location to show nearby places.</string>
+
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app uses your location to provide continuous tracking even in the background.</string>
+
 </dict>
 </plist>
