--- a/frontend_weft/pubspec.yaml
+++ b/frontend_weft/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   location: ^5.0.3     # For getting user location
   geolocator: ^10.1.0
   intl: ^0.18.0
+  excel: ^2.0.0  # For reading Excel files
+  file_picker: ^5.0.0  # For file selection
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
